--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,6 +4,7 @@
 :root {
     --primary-color: #fe2c55;
     --black: #000;
+    --white: #fff;
     --text-color: #333;
     //DefaultLayout
     --defaut-layout-header-height: 60px;
