--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -14,13 +14,23 @@
     height: 100%;
 }
 
-.logo {}
+.search,
+.search-result {
+    width: 361px;
+}
 
+.search-title {
+    height: 30px;
+    padding: 5px 12px;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+}
 .search {
     display: flex;
     overflow: hidden;
     position: relative;
-    width: 361px;
     height: 46px;
     padding-left: 16px;
     background: rgba(22, 24, 35, .06);
@@ -36,7 +46,7 @@
         background-color: transparent;
     }
 
-    input:not(:placeholder-shown) ~ .search-btn {
+    input:not(:placeholder-shown)~.search-btn {
         color: rgba(22, 24, 35, .75);
     }
 
@@ -62,7 +72,8 @@
     top: 50%;
     transform: translateY(-50%);
     margin: 0 12px;
-    color: rgba(22, 24, 35, .34);;
+    color: rgba(22, 24, 35, .34);
+    ;
 }
 
 .search-btn {
@@ -71,7 +82,7 @@
     font-size: 18px;
     padding: 11px 16px 11px 12px;
     color: rgba(22, 24, 35, .34);
-    cursor: pointer;   
+    cursor: pointer;
     background: transparent;
 
     &:hover {
