--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,22 +1,86 @@
 .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-width: 100px;
+    max-height: 36px;
     padding: 9px 16px;
     border-radius: 4px;
     font-size: 1.6rem;
     font-weight: 700;
+    background-color: var(--white);
     border: 1px solid transparent;
     cursor: pointer;
+    user-select: none;
+
+    +.wrapper {
+        margin-left: 8px;
+    }
+
+    &.disabled {
+        pointer-events: none;
+        opacity: 0.5;
+    }
+}
+
+.icon {
+    display: inline-block;
+    width: 100px
+}
+
+//Button type
+
+.rounded {
+    border-radius: 999px;
+    color: rgba(22, 24, 35, .75);
+    box-shadow: 0 2px 8px rgb(0 0 0 / 6%);
+    border-color: rgba(22, 24, 35, .12);
+
+    &:hover {
+        border-color: rgba(22, 24, 35, .2);
+        background-color: rgba(255, 255, 255, 1);
+    }
 }
 
 .primary {
     color: var(--white);
     background-color: var(--primary-color);
+    border-color: var(--primary-color);
 
     &:hover {
+        border-color: var(--primary-color);
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), #FE2C55;
     }
 }
 
+
 .outline {
-    border-color: var(--primary-color);
+    color: var(--primary-color);
+    border-color: currentColor;
+    ;
+
+    &:hover {
+        border-color: currentColor;
+        background-color: rgba(254, 44, 85, 0.06);
+    }
+}
+
+.text {
+    &:hover {
+        text-decoration: underline;
+        ;
+    }
+}
+
+
+//Button size
+
+.small {
+    min-width: 88px;
+    padding: 4px 16px;
+}
+
+.large {
+    padding: 14px 16px;
+    min-width: 140px;
 }
