--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -3,6 +3,8 @@
 
     .menu-item {
         display: flex;
+        align-items: center;
+
         width: 100%;
         flex: 1;
         height: 42px;
@@ -16,11 +18,16 @@
         user-select: none;
 
         span {
+            display: flex;
+            align-items: center;
+
             svg {
                 width: 20px;
+                height: 20px;
+                margin-right: 10px;
             }
         }
-    
+
         &:hover {
             background: rgba(22, 24, 35, 0.03);
         }
@@ -29,4 +36,26 @@
 
 .menu-container {
     padding-bottom: 8px;
+}
+
+
+//Header
+.header {
+    position: relative;
+    height: 50px;
+    margin-top: -8px;
+}
+
+.back-btn {
+    width: 50px;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.header-title {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
